Remove a CSS back and fix it with z-index

--- a/mkdocs/themes/slate/css/base.css
+++ b/mkdocs/themes/slate/css/base.css
@@ -54,6 +54,7 @@ div.source-links {
 .bs-sidebar .nav > li > a {
     display: block;
     padding: 5px 20px;
+    z-index: 1;
 }
 .bs-sidebar .nav > li > a:hover,
 .bs-sidebar .nav > li > a:focus {
@@ -108,11 +109,5 @@ div.source-links {
     .bs-sidebar.affix-bottom,
     .bs-sidebar.affix {
         width: 263px;
-    }
-}
-
-@media (max-width: 992px) {
-    div[role=main]{
-        pointer-events: none;
     }
 }
